--- a/css/layout.css
+++ b/css/layout.css
@@ -68,7 +68,7 @@ a {color: #fff;}
 
 /* #wrapper = flexcontainer: column for header, main, nav */
 /* 90vh = 90% viewport height, 90vw = 90% viewport width */
-#wrapper {margin: 0 auto; width: 90vw; max-width: 1200px; height: 90vh; min-height: 700px;
+#wrapper {margin: 0 auto; width: 90vw; max-width: 1200px; 
     display: flex;
     flex-flow: column nowrap; /* flex-direction: column; + flex-wrap: nowrap; */
     justify-content: center; /* wenn column, dann justify-content + align-items vertauscht */
@@ -77,12 +77,15 @@ a {color: #fff;}
 
 /* header = flexcontainer: row for 3 divs */
 header {display: flex; flex-flow: row nowrap; justify-content: space-between; align-items: center; padding: 1rem;}
-header #lang {flex-grow: 0; background-color: #ddd;}
-header #sep {flex-grow: 1; height:2px; background-color: #fff;}
+
+/* header #lang = flexcontainer: row for 2 img */
+header #lang {flex-grow: 0; display: flex; flex-flow: row nowrap; justify-content: center; align-items: center;}
+header #lang a {margin-right: 0.1rem;}
+header #sep {flex-grow: 1; height:1px; background-color: #fff;}
 header #logo {flex-grow: 0; background-image: url(../assets/img/passbild.jpg); background-repeat: no-repeat; background-position: center center;
     background-size: cover; width: 140px; height: 140px; border-radius: 75px;}
 
-main {height: 60vh; min-height: 430px; padding: 1em; box-shadow: 3px 3px 1px #222;}
+main {padding: 1em; box-shadow: 3px 3px 1px #222;}
 main article h3 {text-transform: uppercase; font-size: 2rem; font-weight: 300; font-stretch: expanded; margin-bottom: 2rem; text-align: center;}
 
 /* nav ul = flexcontainer: row for li elements */
@@ -101,5 +104,7 @@ nav ul li.active a {color: #fff;}
 	nav {order: 1; margin-top: 0; border-bottom: 1px solid #fff;}
     nav ul {justify-content: space-evenly;}
 	header {order: 2;}
+    header #lang {flex-flow: column nowrap;}
+    header #lang img {margin-bottom: 0.1rem;}
     main {order: 3;}
 }
