--- a/css/layout.css
+++ b/css/layout.css
@@ -61,10 +61,10 @@
     url('../assets/fonts/source-sans-pro-v14-latin-700.svg#SourceSansPro') format('svg');
 }
 
-html {font-family: Source Sans Pro,sans-serif; font-size: 14pt; font-weight: 300; line-height: 1.8rem; color: #fff;}
+html {font-family: Source Sans Pro,sans-serif; font-size: 14pt; font-weight: 300; line-height: 1.8rem; color: #222;}
 * {padding:0; margin:0;}
-body {background: #333; margin: 1em;}
-a {color: #fff;}
+body {background: #ddd; margin: 1em;}
+a {color: #030;}
 
 /* #wrapper = flexcontainer: column for header, #content */
 /* 90vh = 90% viewport height, 90vw = 90% viewport width */
@@ -81,33 +81,40 @@ header {display: flex; flex-flow: row nowrap; justify-content: space-between; al
 /* header #lang = flexcontainer: row for 2 img */
 header #lang {flex: 0 1 auto; display: flex; flex-flow: row nowrap; justify-content: center; align-items: center; line-height: 0;}
 header #lang a img {padding: 0.2rem;}
-header #sep {flex-grow: 1; height:1px; background-color: #fff;}
+header #sep {flex-grow: 1; height:1px; background-color: #030;}
 header #logo {flex-grow: 0; background-image: url(../assets/img/passbild.jpg); background-repeat: no-repeat; background-position: center center;
     background-size: cover; width: 140px; height: 140px; border-radius: 75px;}
+header #logo:hover {filter: grayscale(100%);}
+header #logo:hover .circle {animation: strokeout 1s ease-out forwards;}
+header #logo .circle {stroke-dasharray: 427; stroke-dashoffset: 427; animation: strokein 1s ease-out forwards;}
 
-/* flexes nav + main in a row */
-#content {display: flex; flex-flow: row nowrap; justify-content: space-between; align-items: flex-start; gap: 2rem;}
+/* flexes nav + main + aside in a row */
+#content {display: flex; flex-flow: row nowrap; justify-content: space-between; align-items: flex-start; gap: 1.5rem;}
 
-main {flex: 6; padding: 1em; box-shadow: 3px 3px 1px #222;}
+main {flex: 1 1 90%; padding: 1em; box-shadow: 3px 3px 1px #030;}
 main article h3 {text-transform: uppercase; font-size: 2rem; font-weight: 300; font-stretch: expanded; margin-bottom: 2rem; text-align: center;}
+main article h4 {text-transform: uppercase; font-size: 1.5rem; font-weight: 300; margin-bottom: 1.5rem; text-align: center;}
+main article {margin-bottom: 2rem;}
+main img.main {width: 120px; height: 120px; border-radius: 60px; margin: 0 auto;}
+main div.vline {width: 1px; height: 20px; margin: 0 auto; background-color: #030;}
+.mobile {display: none; }
 
 /* nav ul = flexcontainer: row for li elements */
-nav {flex: 1;}
+nav {flex: 0 0 7.5rem;}
 nav ul {display: flex; flex-flow: column nowrap; justify-content: space-around; list-style: none;}
-nav ul li {margin: 0.5rem 0; border: 2px inset #fff; border-radius: 5px; padding: 0.1rem 0.5rem;}
-nav ul li:hover {background-color: #555;}
-nav ul li:hover a { text-shadow: 2px 2px #333;}
-nav ul li a {font-size: 0.8rem; text-decoration: none;}
-nav ul li.active {background-color: #222;}
-nav ul li.active a {color: #fff;}
+nav ul li {margin: 0.3rem 0; border: 2px ridge #030; border-radius: 5px; padding: 0.1rem 0.2rem 0.1rem 0.5rem;}
+nav ul li:active {animation-name: shaking; animation-duration: 0.2s; animation-direction: normal; animation-timing-function: ease-in-out; animation-iteration-count: 1;}
+nav ul li a {font-size: 0.8rem; font-weight: bolder; text-decoration: none; display: inline-block; width: 100%;}
+nav ul li a:hover:after {font-family: FontAwesome; content: "\f25a"; display: block; font-weight: 300; float: right; color: #333;}
+nav ul li.active a:after {font-family: FontAwesome; content: "\f046"; display: block; font-weight: 300; float: right; color: #030;}
 
 /* Hamburger menu */
 /* Placeholder */
 nav .menu-icon {cursor: pointer; display: none; padding: 10px 20px; position: relative; user-select: none;}
 /* One Hamburger line */
-nav .menu-icon .navicon { background: #eee; display: block; height: 2px; position: relative; transition: background .2s ease-out; width: 18px;}
+nav .menu-icon .navicon {background: #030; display: block; height: 2px; position: relative; transition: background .2s ease-in-out; width: 18px;}
 /* Two other Hamburger lines */
-nav .menu-icon .navicon:before, nav .menu-icon .navicon:after {background: #eee; content: ''; display: block; height: 100%; position: absolute; 
+nav .menu-icon .navicon:before, nav .menu-icon .navicon:after {background: #030; content: ''; display: block; height: 100%; position: absolute; 
     transition: all .2s ease-out;  width: 100%;}
 nav .menu-icon .navicon:before {top: 5px;}
 nav .menu-icon .navicon:after {top: -5px;}
@@ -121,15 +128,43 @@ nav .menu-btn:checked ~ .menu-icon .navicon:after {transform: rotate(45deg);}
 /* now 2 half crosses */
 nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before, nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {top: 0;}
 
+aside {flex: 0 1 1rem;}
+aside ul.icons {display: flex; flex-flow: column nowrap; justify-content: space-between; gap: 0.5rem; list-style: none;}
+aside ul.icons li a {font-size: 1.2rem; text-decoration: none;}
+
 @media screen and (max-width: 680px) {
     html {font-size: 12pt;}
 	body {margin:0.5rem;}
     header {flex-flow: column nowrap; align-items: flex-end;}
-    header #logo {display: none; }
+    header #logo {display: none;}
     #content {flex-flow: column nowrap; gap: 0.2rem; margin-top: -2.5rem;}
-    main article {width: 100%; margin: 0.5rem 0;}
-    nav {width: 100%;}
+    main {order: 3;}
+    main article {width: 100%;}
+    main article h3 {padding-top: 2rem; border-top: 1px solid #030;}
+    main img.main {border: 2px inset #030; border-radius: 75px;}
+    main img.main:hover {filter: grayscale(100%);}
+    .mobile {display: block;}
+    nav {flex: 1; order: 1; width: 100%;}
     nav ul {display: none;}
-    nav ul li {border: 1px solid #fff; border-radius: 3px; padding: 0.2rem 1.5rem; display: block;}
+    nav ul li {border: 1px ridge #030; border-radius: 3px; padding: 0.2rem 1.5rem; display: block;}
+    nav ul li:active {animation: none;}
     nav .menu-icon {display: inline-block;}
+    aside {order: 2; margin: auto;}
+    aside ul.icons {flex-flow: row nowrap; justify-content: space-between;}
+}
+
+@keyframes shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+}
+
+@keyframes strokein {
+    to {stroke-dashoffset: 0;}
+}
+
+@keyframes strokeout {
+    to {stroke-dashoffset: 0;}
 }
